fixed edit area visible in normal view.

--- a/projects/CodeSaver/style.css
+++ b/projects/CodeSaver/style.css
@@ -130,7 +130,7 @@ body {
   outline: none !important;
 }
 
-.code-area.hide {
+.area.hide {
   display: none;
 }
 
